# BianchiIX_calculations

./: CMakeLists.txt  Makefile  anisotropic_initial_conditions.h  bV_test  bianchiIX_solutions  constants.h  isotropic_initial_conditions.h  main.cpp  test.cpp  test_calc
bianchiIX/: bianchiIX_anisotropy.cpp  bianchiIX_anisotropy.h  bianchiIX_isotropy.cpp  bianchiIX_isotropy.h
bianchiV/: bianchiV_anisotropy.cpp  bianchiV_anisotropy.h  bianchiV_isotropy.cpp  bianchiV_isotropy.h
initial_conditions/: BIX_anisotropic_initial_conditions.h  BIX_isotropic_initial_conditions.h  BV_anisotropic_initial_conditions.h  BV_isotropic_initial_conditions.h
nr/: ludcmp.h  odeint.h  stepper.h  stepperbs.h  stepperdopr5.h  stepperdopr853.h  stepperross.h
output/: bianchiIX_anisotropic_eta_0.018000_omega_2_0.000010_dbp_0.001000_dbm_0.001000_1000p_downside.txt  bianchiIX_anisotropic_eta_0.018000_omega_2_0.000010_dbp_0.001000_dbm_0.001000_1000p_upside.txt  bianchiIX_anisotropic_eta_0.018000_omega_2_0.000010_dbp_0.001000_dbm_0.001000_3000p_downside.txt  bianchiIX_anisotropic_eta_0.018000_omega_2_0.000010_dbp_0.001000_dbm_0.001000_3000p_upside.txt  bianchiIX_anisotropic_eta_0.072000_omega_2_0.000010_omega_0_0.010000_omega_3_0.000000_omega_4_0.000000_dbp_0.000000_dbm_0.000000_bp_0.000000_bm_0.000000_1000p_downside.txt  bianchiIX_anisotropic_eta_0.072000_omega_2_0.000010_omega_0_0.010000_omega_3_0.001000_omega_4_0.001000_dbp_0.000000_dbm_0.000000_bp_0.000000_bm_0.000000_1000p_downside.txt  bianchiV_anisotropic_eta_0.018000_omega_2_0.000010_s_1.000000_1000p_downside.txt  output_writer.h  (+1 more)
